# xhec-mlops-2025

./: .gitignore  .pre-commit-config.yaml  PREREQUISITES.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
lessons/00-intro/: practice-intro-subject.ipynb
lessons/01-model-and-experiment-management/: practice-experiment-tracking-subject.ipynb
lessons/02-model-deployment/: Dockerfile.app  README.md
lessons/03-pipeline-and-orchestration/: orchestration.ipynb
lessons/03-pipeline-and-orchestration/lib/: config.py  helpers.py
lessons/best-practices/: .pre-commit-config.yaml  best_practices_guide.md  pyproject.toml
lessons/best-practices/lib/: hello_world.py
